--- a/Thriftly/frontend/onlineshop-frontend/public/index.html
+++ b/Thriftly/frontend/onlineshop-frontend/public/index.html
@@ -1,1 +1,17 @@
-<!-- Placeholder index.html for Vue app -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Thriftly</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  </head>
+  <body>
+    <noscript>
+      <strong>
+        Maaf, aplikasi Thriftly membutuhkan JavaScript agar dapat berjalan.
+      </strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
